--- a/frontend/src/assets/css/globalStyles.css
+++ b/frontend/src/assets/css/globalStyles.css
@@ -1,16 +1,15 @@
-img.bg {
-	min-height: 100%;
-	min-width: 1024px;
-	width: 100%;
-	height: auto;
-	position: fixed;
-	top: 0;
-	left: 0;
+.bg {
+	background-image: url('../images/background-pattern-opacity.png');
+	background-size: cover;
+	background-repeat: no-repeat;
+	height: 100vh;
+	margin-top: -70px;
+	font-size: 50px;
 }
 
 @media screen and (max-width: 1024px) {
 
-	img.bg {
+	.bg {
 		left: 50%;
 		margin-left: -512px;
 	}
